--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no, viewport-fit=cover">
+<meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
+<meta http-equiv="Pragma" content="no-cache">
+<meta http-equiv="Expires" content="0">
 <meta name="apple-mobile-web-app-capable" content="yes">
 <meta name="apple-mobile-web-app-status-bar-style" content="default">
 <meta name="apple-mobile-web-app-title" content="ADMIN THEMT">
@@ -230,7 +233,7 @@ body.boss-mode #stickySubmit button{max-width:600px}
   <!-- PRODUCT MANAGEMENT -->
   <div style="display:flex;justify-content:space-between;align-items:center;margin-bottom:12px">
     <div style="font-weight:700;font-size:16px">🧴 จัดการสินค้า</div>
-    <button onclick="forceSyncToSheets()" style="background:linear-gradient(135deg,#4CAF50,#66BB6A);color:#fff;border:none;border-radius:10px;padding:8px 16px;font-size:12px;font-weight:700;cursor:pointer;font-family:inherit">☁️ Sync ขึ้น Cloud</button>
+    <div style="display:flex;gap:6px"><button onclick="forceSyncToSheets()" style="background:linear-gradient(135deg,#4CAF50,#66BB6A);color:#fff;border:none;border-radius:10px;padding:8px 14px;font-size:12px;font-weight:700;cursor:pointer;font-family:inherit">☁️ Sync ขึ้น Cloud</button><button onclick="testConnection()" style="background:linear-gradient(135deg,#2196F3,#42A5F5);color:#fff;border:none;border-radius:10px;padding:8px 14px;font-size:12px;font-weight:700;cursor:pointer;font-family:inherit">🔍 ทดสอบ</button></div>
     <button style="background:linear-gradient(135deg,var(--brown),var(--bl));border:none;border-radius:10px;padding:8px 14px;cursor:pointer;font-size:12px;font-weight:700;color:#fff" onclick="showAddProduct()">+ เพิ่มสินค้า</button>
   </div>
   <div id="prodMgmt"></div>
@@ -302,8 +305,9 @@ function showApp(){
   document.getElementById('topNm').textContent=cu.name;
   const r=document.getElementById('topRl');if(cu.role==='boss'){r.textContent='หัวหน้า';r.className='trole rb'}else{r.textContent='แอดมิน';r.className='trole ra'}
   document.getElementById('topTm').textContent=cu.team!=='ทั้งหมด'?cu.team:'';buildNav();
-  // โหลดสินค้าจาก Sheets
-  loadProductsFromSheets().then(()=>nav('home'));
+  // โหลดสินค้าจาก Sheets พร้อมแสดงสถานะ
+  const pg=document.getElementById('pg');if(pg)pg.innerHTML='<div style="text-align:center;padding:40px 20px"><div style="font-size:40px;margin-bottom:12px">☁️</div><div style="font-size:14px;color:#888">กำลังโหลดข้อมูลจาก Cloud...</div></div>';
+  loadProductsFromSheets().then(()=>{nav(cu.role==='boss'?'home':'add')}).catch(()=>{nav(cu.role==='boss'?'home':'add')});
 }
 function buildNav(){
   const b=cu.role==='boss';
@@ -403,7 +407,9 @@ function renderAdminHome(td){
   const v=getVO(),to=v.filter(o=>o.date===td),tt=to.reduce((s,o)=>s+o.amount,0);
   document.getElementById('hTotal').textContent=`฿${tt.toLocaleString()}`;
   document.getElementById('hSub').textContent=`ยอดขายวันนี้ • ${to.length} ออเดอร์`;
-  const myP=getMyProducts();const cols=myP.length<=3?myP.length:3;
+  const myP=getMyProducts();
+  if(myP.length===0){document.getElementById('homeStats').innerHTML='<div style="grid-column:1/-1;text-align:center;padding:20px"><div style="font-size:40px;margin-bottom:8px">📦</div><div style="font-size:14px;color:#999;line-height:1.6">ยังไม่มีสินค้า<br><span style="font-size:12px">รอหัวหน้า Sync สินค้าขึ้น Cloud<br>แล้ว Logout แล้ว Login ใหม่</span></div></div>';return}
+  const cols=myP.length<=3?myP.length:3;
   document.getElementById('homeStats').style.gridTemplateColumns=`repeat(${cols},1fr)`;
   document.getElementById('homeStats').innerHTML=myP.map(p=>{
     const sum=to.filter(o=>o.productId===p.id).reduce((s,o)=>s+o.qty,0);
@@ -672,15 +678,16 @@ function checkDetail(){const d=document.getElementById('inDetail').value;const e
 async function submitOrd(){if(!selProd)return;const p=products.find(x=>x.id===selProd);const detail=document.getElementById('inDetail').value.trim();if(!detail){document.getElementById('detailErr').textContent='⚠️ กรุณากรอกรายละเอียดก่อนบันทึก';document.getElementById('inDetail').style.borderColor='var(--rd)';document.getElementById('inDetail').focus();return}const phone=extractPhone(detail)||'';if(!phone){document.getElementById('inDetail').focus();checkDetail();const pr=analyzePhone(detail);if(pr.s==='none')showPhoneToast('err','❌','ไม่พบเบอร์โทร!','กรุณาใส่เบอร์โทร 10 หลัก ขึ้นต้น 0');return}const now=new Date(),td=fD(now);const btn=document.getElementById('subBtn');btn.disabled=true;btn.textContent='⏳ กำลังบันทึก...';const o={id:Date.now(),dailyNo:getDailyNo(td),date:td,time:fT(now),productId:p.id,productName:p.name,productSheet:p.sheet,price:p.price,qty,amount:p.price*qty,phone:phone,detail:detail,addedBy:cu.email,adminName:cu.name,team:cu.team};orders.unshift(o);sv('cream_orders',orders);sendToSheets(o);selProd=null;qty=1;initAddPage();showSuc('✅','บันทึกสำเร็จ!',`${p.short} x${qty} = ฿${o.amount.toLocaleString()}${phone?' | 📞'+phone:''}`);setTimeout(hideSuc,800)}
 
 // SEND TO SHEETS
-async function sendToSheets(o){if(APPS_SCRIPT_URL.includes("YOUR_GOOGLE"))return;try{const p=products.find(x=>x.id===o.productId);const body=JSON.stringify({action:"addOrder",...o,productShort:p?p.short:o.productName,phone:o.phone||""});await fetch(APPS_SCRIPT_URL,{method:"POST",body:body,headers:{"Content-Type":"text/plain"}}).catch(()=>fetch(APPS_SCRIPT_URL,{method:"POST",mode:"no-cors",body:body}))}catch(e){console.log("Sheets:",e)}}
+async function sendToSheets(o){if(APPS_SCRIPT_URL.includes("YOUR_GOOGLE"))return;try{const p=products.find(x=>x.id===o.productId);const body=JSON.stringify({action:"addOrder",...o,productShort:p?p.short:o.productName,phone:o.phone||""});await fetch(APPS_SCRIPT_URL,{method:"POST",mode:"no-cors",headers:{"Content-Type":"text/plain"},body:body});console.log("Order sent to Sheets")}catch(e){console.log("Sheets:",e)}}
 
 // SYNC สินค้าไป Google Sheets
-function syncProducts(){if(APPS_SCRIPT_URL.includes("YOUR_GOOGLE"))return;const body=JSON.stringify({action:"saveProducts",products:products.map(p=>({id:p.id,name:p.name,short:p.short,price:p.price,icon:p.icon||"",sheet:p.sheet,sku:p.sku||"",img:p.img||""}))});fetch(APPS_SCRIPT_URL,{method:"POST",body:body,headers:{"Content-Type":"text/plain"}}).then(r=>r.text()).then(t=>{console.log("SyncProducts OK:",t)}).catch(e=>{console.log("SyncProducts retry no-cors");fetch(APPS_SCRIPT_URL,{method:"POST",mode:"no-cors",body:body})})}
-function syncAssign(){if(APPS_SCRIPT_URL.includes("YOUR_GOOGLE"))return;const body=JSON.stringify({action:"saveAssign",assign:productAssign});fetch(APPS_SCRIPT_URL,{method:"POST",body:body,headers:{"Content-Type":"text/plain"}}).then(r=>r.text()).then(t=>{console.log("SyncAssign OK:",t)}).catch(e=>{fetch(APPS_SCRIPT_URL,{method:"POST",mode:"no-cors",body:body})})}
-async function forceSyncToSheets(){if(products.length===0){showSuc('⚠️','ไม่มีสินค้า','เพิ่มสินค้าก่อน');setTimeout(hideSuc,1500);return}showSuc('☁️','กำลัง Sync...','อัปโหลดสินค้า '+products.length+' รายการ');try{const body=JSON.stringify({action:"saveProducts",products:products.map(p=>({id:p.id,name:p.name,short:p.short,price:p.price,icon:p.icon||"",sheet:p.sheet,sku:p.sku||"",img:p.img||""}))});const res=await fetch(APPS_SCRIPT_URL,{method:"POST",body:body,headers:{"Content-Type":"text/plain"}});const txt=await res.text();console.log("ForceSync:",txt);syncAssign();showSuc('✅','Sync สำเร็จ!','สินค้า '+products.length+' รายการ อัปโหลดแล้ว');setTimeout(hideSuc,2000)}catch(e){console.log("ForceSync error:",e);try{const body=JSON.stringify({action:"saveProducts",products:products.map(p=>({id:p.id,name:p.name,short:p.short,price:p.price,icon:p.icon||"",sheet:p.sheet,sku:p.sku||"",img:p.img||""}))});await fetch(APPS_SCRIPT_URL,{method:"POST",mode:"no-cors",body:body});syncAssign();showSuc('✅','Sync สำเร็จ!','(no-cors mode)');setTimeout(hideSuc,2000)}catch(e2){showSuc('❌','Sync ไม่สำเร็จ',e2.message||'ลองใหม่');setTimeout(hideSuc,3000)}}}
+function syncProducts(){if(APPS_SCRIPT_URL.includes("YOUR_GOOGLE"))return;const body=JSON.stringify({action:"saveProducts",products:products.map(p=>({id:p.id,name:p.name,short:p.short,price:p.price,icon:p.icon||"",sheet:p.sheet,sku:p.sku||"",img:p.img||""}))});fetch(APPS_SCRIPT_URL,{method:"POST",mode:"no-cors",headers:{"Content-Type":"text/plain"},body:body}).then(()=>console.log("SyncProducts sent")).catch(e=>console.log("SyncProducts err:",e))}
+function syncAssign(){if(APPS_SCRIPT_URL.includes("YOUR_GOOGLE"))return;const body=JSON.stringify({action:"saveAssign",assign:productAssign});fetch(APPS_SCRIPT_URL,{method:"POST",mode:"no-cors",headers:{"Content-Type":"text/plain"},body:body}).then(()=>console.log("SyncAssign sent")).catch(e=>console.log("SyncAssign err:",e))}
+async function forceSyncToSheets(){if(products.length===0){showSuc('⚠️','ไม่มีสินค้า','เพิ่มสินค้าก่อน');setTimeout(hideSuc,1500);return}showSuc('☁️','กำลัง Sync...','อัปโหลดสินค้า '+products.length+' รายการ');try{const body=JSON.stringify({action:"saveProducts",products:products.map(p=>({id:p.id,name:p.name,short:p.short,price:p.price,icon:p.icon||"",sheet:p.sheet,sku:p.sku||"",img:p.img||""}))});await fetch(APPS_SCRIPT_URL,{method:"POST",mode:"no-cors",headers:{"Content-Type":"text/plain"},body:body});syncAssign();showSuc('✅','Sync สำเร็จ!','สินค้า '+products.length+' รายการ อัปโหลดแล้ว\nรอ 5 วิ แล้วให้แอดมิน logout/login ใหม่');setTimeout(hideSuc,4000)}catch(e){showSuc('❌','Sync ไม่สำเร็จ',e.message||'ลองใหม่');setTimeout(hideSuc,3000)}}
+async function testConnection(){showSuc('🔍','กำลังทดสอบ...','เชื่อมต่อ Google Sheets');try{const res=await fetch(APPS_SCRIPT_URL);const data=await res.json();const pCount=data.products?data.products.length:0;const oCount=data.orders?data.orders.length:0;showSuc('✅','เชื่อมต่อสำเร็จ!','สินค้าใน Cloud: '+pCount+' รายการ\nออเดอร์วันนี้: '+oCount+' รายการ');setTimeout(hideSuc,4000)}catch(e){showSuc('❌','เชื่อมต่อไม่ได้',e.message||'ตรวจสอบ URL');setTimeout(hideSuc,3000)}}
 
 // โหลดสินค้าจาก Sheets (ใช้ตอน login)
-async function loadProductsFromSheets(){if(APPS_SCRIPT_URL.includes("YOUR_GOOGLE"))return;try{const res=await fetch(APPS_SCRIPT_URL,{redirect:'follow'});if(!res.ok){console.log("LoadProd HTTP error:",res.status);return}const data=await res.json();console.log("Sheets data:",JSON.stringify(data).substring(0,200));if(data.products&&data.products.length>0){const sp=data.products.map(p=>({...p,img:p.img||''}));products=sp;sv('cream_products',products);console.log("Loaded "+products.length+" products from Sheets")}else if(cu&&cu.role==='boss'&&products.length>0){console.log("Boss has local products, auto-sync to Sheets");syncProducts();syncAssign()}if(data.assign){productAssign=data.assign;sv('cream_prodAssign',productAssign)}}catch(e){console.log("LoadProd error:",e.message||e)}}
+async function loadProductsFromSheets(){if(APPS_SCRIPT_URL.includes("YOUR_GOOGLE"))return;try{const res=await fetch(APPS_SCRIPT_URL);const data=await res.json();console.log("Sheets response:",JSON.stringify(data).substring(0,300));if(data.products&&data.products.length>0){const sp=data.products.map(p=>({...p,img:p.img||''}));products=sp;sv('cream_products',products);console.log("Loaded "+products.length+" products from Sheets")}else{console.log("No products in Sheets. Local:"+products.length);if(cu&&cu.role==='boss'&&products.length>0){console.log("Boss auto-sync products to Sheets");syncProducts();syncAssign()}}if(data.assign){productAssign=data.assign;sv('cream_prodAssign',productAssign)}}catch(e){console.log("LoadProd error:",e.message||e)}}
 
 // ORDERS
 function renderOrd(){
@@ -951,6 +958,10 @@ function showSuc(ic,m,s){document.getElementById('sucIcon').textContent=ic;docum
 function hideSuc(){document.getElementById('sucOv').style.display='none'}
 
 document.addEventListener('DOMContentLoaded',()=>{
+  // ล้าง cache เมื่อเวอร์ชันเปลี่ยน
+  const APP_VER='v10.2';if(localStorage.getItem('cream_ver')!==APP_VER){localStorage.removeItem('cream_products');localStorage.removeItem('cream_prodAssign');localStorage.setItem('cream_ver',APP_VER);console.log('Cache cleared for '+APP_VER)}
+  // ลบ service worker เก่า (ถ้ามี)
+  if('serviceWorker' in navigator){navigator.serviceWorker.getRegistrations().then(r=>{r.forEach(w=>w.unregister())})}
   users=ld('cream_users',DEFAULT_USERS);teams=ld('cream_teams',['ทีม A','ทีม B']);orders=ld('cream_orders',[]);products=ld('cream_products',DEFAULT_PRODUCTS);productAssign=ld('cream_prodAssign',{});
   checkSession();
   document.getElementById('loginPin').addEventListener('keydown',e=>{if(e.key==='Enter')doLogin()});
