Update styling and functionality of product cards

--- a/index.html
+++ b/index.html
@@ -61,14 +61,14 @@ input::placeholder,textarea::placeholder{color:#ccc}
 .lerr{color:var(--rd);font-size:13px;text-align:center;min-height:20px}
 .ov{position:fixed;inset:0;background:rgba(0,0,0,.5);backdrop-filter:blur(8px);display:flex;align-items:center;justify-content:center;z-index:300;padding:20px}
 .ob{background:#fff;border-radius:24px;padding:36px 28px;text-align:center;max-width:320px;width:100%;animation:popIn .3s ease}
-.prod-card{background:#fff;border:2px solid rgba(180,140,100,.12);border-radius:20px;padding:20px 12px;cursor:pointer;text-align:center;transition:all .3s;position:relative;overflow:hidden}
+.prod-card{background:#fff;border:2px solid rgba(180,140,100,.12);border-radius:14px;padding:10px 8px;cursor:pointer;text-align:center;transition:all .3s;position:relative;overflow:hidden}
 .prod-card:active{transform:scale(.97)}
-.prod-card.selected{background:linear-gradient(145deg,var(--brown),var(--bl));border-color:transparent;box-shadow:0 8px 25px rgba(139,94,60,.3)}
-.prod-card .pi{font-size:36px;margin-bottom:6px}
-.prod-card .pname{font-size:12px;font-weight:700;color:var(--t);line-height:1.3}
-.prod-card .pprice{font-size:20px;font-weight:800;color:var(--brown);margin-top:4px}
+.prod-card.selected{background:linear-gradient(145deg,var(--brown),var(--bl));border-color:transparent;box-shadow:0 6px 18px rgba(139,94,60,.3)}
+.prod-card .pi{font-size:28px;margin-bottom:2px}
+.prod-card .pname{font-size:11px;font-weight:700;color:var(--t);line-height:1.2;white-space:nowrap;overflow:hidden;text-overflow:ellipsis}
+.prod-card .pprice{font-size:15px;font-weight:800;color:var(--brown);margin-top:2px}
 .prod-card.selected .pname,.prod-card.selected .pprice{color:#fff}
-.prod-card .pcheck{position:absolute;top:8px;right:8px;width:22px;height:22px;border-radius:50%;background:var(--gr);color:#fff;font-size:12px;display:none;align-items:center;justify-content:center;font-weight:700}
+.prod-card .pcheck{position:absolute;top:4px;right:4px;width:18px;height:18px;border-radius:50%;background:var(--gr);color:#fff;font-size:10px;display:none;align-items:center;justify-content:center;font-weight:700}
 .prod-card.selected .pcheck{display:flex}
 .qty-ctrl{display:flex;align-items:center;justify-content:center;gap:16px;margin-top:16px}
 .qty-btn{width:44px;height:44px;border-radius:14px;border:none;cursor:pointer;font-size:22px;font-weight:700;display:flex;align-items:center;justify-content:center}
@@ -668,7 +668,7 @@ function orderRow(o,i){const p=products.find(x=>x.id===o.productId);const an=use
 // ADD ORDER
 function initAddPage(){productAssign=ld('cream_prodAssign',{});const now=new Date();document.getElementById('oDate').textContent=fD(now);document.getElementById('oTime').textContent=fT(now);document.getElementById('addInfo').textContent=`${cu.name} • ${fD(now)}`;selProd=null;qty=1;renderProdCards();updateSummary();document.getElementById('qtySection').style.display='none';document.getElementById('qtyVal').textContent='1';document.getElementById('detailSection').style.display='none';document.getElementById('inDetail').value='';document.getElementById('inDetail').style.borderColor='rgba(180,140,100,.15)';document.getElementById('detailErr').textContent='';document.getElementById('phoneDetect').innerHTML='';document.getElementById('phoneDetect').style.padding='0';document.getElementById('phoneDetect').style.border='none';_lastPhoneState='';if(window._ti)clearInterval(window._ti);window._ti=setInterval(()=>{document.getElementById('oTime').textContent=fT(new Date())},1000);}
 function getMyProducts(){if(cu.role==='boss')return products;return products.filter(p=>{const a=productAssign[p.id];if(!a||a.length===0)return true;return a.includes(cu.email)})}
-function renderProdCards(){const myProds=getMyProducts();const allCount=products.length;const cols=myProds.length<=3?myProds.length:Math.min(myProds.length,3);document.getElementById('prodCards').style.display='grid';document.getElementById('prodCards').style.gridTemplateColumns=`repeat(${cols},1fr)`;document.getElementById('prodCards').style.gap='12px';let notice='';if(cu.role!=='boss'&&myProds.length<allCount){notice=`<div style="grid-column:1/-1;text-align:center;font-size:11px;color:var(--bl2);padding:4px 0">🔒 หัวหน้ากำหนดสินค้าให้คุณ ${myProds.length} รายการ</div>`}else if(cu.role!=='boss'&&myProds.length===0){notice=`<div style="grid-column:1/-1;text-align:center;font-size:13px;color:var(--rd);padding:20px 0">⚠️ หัวหน้ายังไม่ได้กำหนดสินค้าให้คุณ</div>`}document.getElementById('prodCards').innerHTML=notice+myProds.map(p=>`<div class="prod-card ${selProd===p.id?'selected':''}" onclick="selectProd('${p.id}')"><div class="pcheck">✓</div><div class="pi">${p.img?`<img src="${p.img}" style="width:48px;height:48px;object-fit:cover;border-radius:12px">`:`<span style="font-size:11px;font-weight:700;color:var(--brown);line-height:1.2">${p.short||p.name||'?'}</span>`}</div><div class="pname">${p.short}</div><div class="pprice">฿${p.price}</div></div>`).join('')}
+function renderProdCards(){const myProds=getMyProducts();const allCount=products.length;const cols=myProds.length<=2?myProds.length:3;document.getElementById('prodCards').style.display='grid';document.getElementById('prodCards').style.gridTemplateColumns=`repeat(${cols},1fr)`;document.getElementById('prodCards').style.gap='8px';let notice='';if(cu.role!=='boss'&&myProds.length<allCount){notice=`<div style="grid-column:1/-1;text-align:center;font-size:11px;color:var(--bl2);padding:4px 0">🔒 หัวหน้ากำหนดสินค้าให้คุณ ${myProds.length} รายการ</div>`}else if(cu.role!=='boss'&&myProds.length===0){notice=`<div style="grid-column:1/-1;text-align:center;font-size:13px;color:var(--rd);padding:20px 0">⚠️ หัวหน้ายังไม่ได้กำหนดสินค้าให้คุณ</div>`}document.getElementById('prodCards').innerHTML=notice+myProds.map(p=>`<div class="prod-card ${selProd===p.id?'selected':''}" onclick="selectProd('${p.id}')"><div class="pcheck">✓</div><div class="pi">${p.img?`<img src="${p.img}" style="width:36px;height:36px;object-fit:cover;border-radius:10px">`:`<span style="font-size:11px;font-weight:700;color:var(--brown);line-height:1.2">${p.short||p.name||'?'}</span>`}</div><div class="pname">${p.short}</div><div class="pprice">฿${p.price}</div></div>`).join('')}
 function selectProd(id){selProd=selProd===id?null:id;qty=1;renderProdCards();document.getElementById('qtySection').style.display=selProd?'block':'none';document.getElementById('detailSection').style.display=selProd?'block':'none';document.getElementById('qtyVal').textContent=qty;updateSummary();if(selProd){setTimeout(()=>{const el=document.getElementById('detailSection');if(el)el.scrollIntoView({behavior:'smooth',block:'nearest'})},250)}}
 function chgQty(d){qty=Math.max(1,qty+d);document.getElementById('qtyVal').textContent=qty;updateSummary()}
 function extractPhone(text){const m=text.match(/0\d[\d\s\-().]{7,14}\d/g);if(m){for(const raw of m){const d=raw.replace(/[\s\-().]/g,'');if(d.length===10&&/^0[2-9]/.test(d))return d}}const m2=text.replace(/[\s\-().]/g,'').match(/0[2-9]\d{8}(?!\d)/g);return m2?m2[0]:null}
@@ -978,7 +978,7 @@ function hideSuc(){document.getElementById('sucOv').style.display='none'}
 
 document.addEventListener('DOMContentLoaded',()=>{
   // === Auto-Update System ===
-  const APP_VER='v10.6';
+  const APP_VER='v10.7';
   window._APP_VER=APP_VER;
   // ล้าง cache เมื่อเวอร์ชันเปลี่ยน
   if(localStorage.getItem('cream_ver')!==APP_VER){localStorage.removeItem('cream_products');localStorage.removeItem('cream_prodAssign');localStorage.setItem('cream_ver',APP_VER);console.log('Cache cleared for '+APP_VER)}
